--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
+    "react-native-fontawesome": "^6.0.1",
     "react-navigation": "^3.3.2",
     "toggle-switch-react-native": "^2.0.2"
   },
